name:                vsgsn
version:             0.1.0.0
synopsis:            Log viewer
license:             PublicDomain
license-file:        LICENSE
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable LogMerger
  main-is:             LogMerger.hs
  -- other-modules:       
  other-extensions:    DeriveDataTypeable, UnicodeSyntax, OverloadedStrings, FlexibleContexts, GADTs, Rank2Types, TemplateHaskell, BangPatterns, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, UndecidableInstances, StandaloneDeriving, TupleSections, NoMonomorphismRestriction, ScopedTypeVariables, KindSignatures
  build-depends:       base >=4.8 && <4.9, pipes >=4.1 && <4.2, bytestring >=0.10 && <0.11, pipes-bytestring >=2.1 && <2.2, cmdargs >=0.10 && <0.11, mtl >=2.2 && <2.3, time >=1.5 && <1.6, containers >=0.5 && <0.6, transformers >=0.4 && <0.5, attoparsec >=0.13 && <0.14, regex-compat >=0.95 && <0.96, lens
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable LogViewer
  main-is:             LogViewer.hs
  -- other-modules:       
  other-extensions:    DeriveDataTypeable, UnicodeSyntax, OverloadedStrings, FlexibleContexts, GADTs, Rank2Types, TemplateHaskell, BangPatterns, MultiParamTypeClasses, FunctionalDependencies, FlexibleInstances, UndecidableInstances, StandaloneDeriving, TupleSections, NoMonomorphismRestriction, ScopedTypeVariables, KindSignatures
  build-depends:       aeson >= 0.9
                     , aeson >=0.9 && <0.10
                     , attoparsec >=0.13 && <0.14
                     , base >=4.8 && <4.9
                     , bytestring >=0.10 && <0.11
                     , cmdargs >=0.10 && <0.11
                     , containers >=0.5 && <0.6
                     , lens >=4.11 && <4.12
                     , mtl >=2.2 && <2.3
                     , pipes >=4.1 && <4.2
                     , pipes-bytestring >=2.1 && <2.2
                     , random >=1.1 && <1.2
                     , regex-compat >=0.95 && <0.96
                     , rest-snap >=0.1 && <0.2
                     , snap-core >=0.9 && <0.10
                     , snap-server >= 0.9.5 && <0.9.6
                     , time >=1.5 && <1.6
                     , transformers >=0.4 && <0.5
  -- hs-source-dirs:      
  default-language:    Haskell2010